<resources>
    <string name="app_name">Better Days</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="per_day_string">Notifications Per Day</string>
    <string name="per_day_summary">Quotes received per day (all times are random)</string>
    <string name="per_day_default">0</string>

    <string name="themes_string">Background Theme</string>
    <string name="themes_summary">Choose the background for your quotes</string>
    <string name="themes_default_value">Default</string>

    <string-array name="quotes_per_day_numbers">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="bg_themes">
        <item>Default</item>
        <item>Forest</item>
        <item>Space</item>
        <item>Mountain</item>
        <item>Beach</item>

    </string-array>

    <string name="about_string">
        Thank you for downloading my app. My intention
        is for this to be a companion to other forms of
        therapy. Like many people across the world, I\'ve
        struggled with varying degrees of depression and
        anxiety and often feel myself getting to my lowest
        points in the middle of long shifts at work or doing
        daily tasks. I decided to make this to provide
        motivational support here and there. Every little bit
        helps and I hope for others out there like me, this
        little bit can provide some measure of comfort.\n\n
        -Daniel

    </string>

</resources>
